syntax = "proto3";

package ecommerce.api.v2;

import "google/protobuf/wrappers.proto";

option go_package = "api/product_info/v2;v2";

service ProductInfo {
  rpc addProduct(Product) returns (google.protobuf.StringValue);
  rpc getProduct(google.protobuf.StringValue) returns (Product);
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ProductID {
  string value = 1;
}
